maximum_scrobble_block widget

--- a/templates/my_page/right_frame.html.twig
+++ b/templates/my_page/right_frame.html.twig
@@ -20,3 +20,6 @@
 
 {% include 'my_statistics/statistic_widget/average_scrobbles_block.html.twig' %}
 <br />
+
+{% include 'my_statistics/statistic_widget/max_scrobbles_block.html.twig' %}
+<br />
