--- a/templates/my_statistics/statistic_widget/average_scrobbles_block.html.twig
+++ b/templates/my_statistics/statistic_widget/average_scrobbles_block.html.twig
@@ -1,6 +1,8 @@
-<div style="height: 200px; width: 354px;" class="flex flex-col native-widget-container">
+<div style="height: 200px; width: 373px;" class="flex flex-col native-widget-container !p-0">
 
-  <div>Average scrobbles</div>
+  <div class="text-gray-900 dark:text-white text-md p-2 flex flex-wrap font-extrabold text-center border-b border-gray-200 rounded-t-lg bg-gray-50 dark:border-gray-700 dark:bg-gray-800 dark:text-red-600">
+    Average scrobbles
+  </div>
 
   <div class="my-auto"></div>
 
