--- a/templates/my_statistics/statistic_widget/average_scrobbles_daily.html.twig
+++ b/templates/my_statistics/statistic_widget/average_scrobbles_daily.html.twig
@@ -1,5 +1,5 @@
 {% include 'my_statistics/statistic_widget/dark_widget.html.twig' with {
   'title': 'Daily',
   'subText': subText,
-  'value': value
+  'value': value|number_format( 0, ',', ' ')
 } %}
