--- a/templates/my_statistics/statistic_widget/max_scrobble_monthly.twig
+++ b/templates/my_statistics/statistic_widget/max_scrobble_monthly.twig
@@ -1,6 +1,5 @@
 {% include 'my_statistics/statistic_widget/dark_widget.html.twig' with {
-  'title': 'Max scrobble per month',
-  'caption': caption,
+  'title': 'Monthly',
   'subText': subText,
-  'value': value
+  'value': value|number_format( 0, ',', ' ')
 } %}
