--- a/templates/statistic_widget/horizontalSkeletonWidget.html.twig
+++ b/templates/statistic_widget/horizontalSkeletonWidget.html.twig
@@ -1,4 +1,4 @@
-<div role="status" class="max-w-sm animate-pulse">
+<div role="status" class="max-w-sm animate-pulse pt-3 px-3">
   <div class="h-6 bg-gray-200 rounded-r-lg dark:bg-gray-700 w-48 mb-4"></div>
   <div class="h-6 bg-gray-200 rounded-r-lg dark:bg-gray-700 max-w-[360px] mb-4"></div>
   <div class="h-6 bg-gray-200 rounded-r-lg dark:bg-gray-700 mb-4"></div>
