--- a/templates/statistic_widget/verticalSkeletonWidget.html.twig
+++ b/templates/statistic_widget/verticalSkeletonWidget.html.twig
@@ -2,7 +2,7 @@
   {% set height = 120 %}
 {% endif %}
 
-<div role="status" class="rounded shadow animate-pulse">
+<div role="status" class="rounded shadow animate-pulse pt-3 px-3">
 
   <div class="flex items-baseline" style="height: {{ height }}px;">
     <div class="w-full bg-gray-200 rounded-t-lg h-3/4 dark:bg-gray-700"></div>
