Add mini album view WIP : update last scrobble view

--- a/templates/my_scrobbles/my_scrobbles.html.twig
+++ b/templates/my_scrobbles/my_scrobbles.html.twig
@@ -6,11 +6,18 @@
     {% set pagination = false %}
   {% endif %}
 
+  {% if mini is defined and mini == 1 %}
+    {% set mini = true %}
+  {% else %}
+    {% set mini = false %}
+  {% endif %}
+
   {% include 'base/html/table/table.html.twig' with {
     'thead' : myScrobblesThead,
     'tbody': scrobbles,
     'tbodyUrl' : myScrobblesTbodyUrl,
-    'pagination' : pagination
+    'pagination' : pagination,
+    'mini' : mini,
   } %}
 
 </div>
