--- a/templates/my_artists/artistCard.html.twig
+++ b/templates/my_artists/artistCard.html.twig
@@ -48,7 +48,7 @@
   <div class="px-4">
     <div class="inline-block text-right w-full py-4">
       <a href="#"
-         class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-red-700 rounded-lg hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800">
+         class="inline-flex items-center px-3 py-2 text-sm button-main-std">
         {{ button }}
         <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
