--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -78,7 +78,7 @@ select:checked{
   @apply bg-gray-700 ring-red-500 border-red-500;
 }
 
-
+ /* In navbar for the profil and setting button */
 .dropdown:hover .dropdown-menu {
   display: block;
 }
@@ -93,10 +93,31 @@ select:checked{
 }
 
 
-
-.no-margin{
-  margin: 0;
+/* Tabs widget */
+.active-tab-widget{
+  @apply inline-block !p-2 !text-red-600 rounded-ss-lg;
 }
+.active-tab-widget:hover{
+  @apply bg-gray-100;
+}
+.dark .active-tab-widget{
+  @apply  bg-gray-800 text-red-500;
+}
+.dark .active-tab-widget:hover{
+  @apply bg-gray-700;
+}
+
+.inactive-tab-widget{
+  @apply inline-block !p-2;
+}
+.inactive-tab-widget:hover{
+  @apply text-gray-600 bg-gray-100
+}
+.dark .inactive-tab-widget:hover{
+  @apply bg-gray-700 text-gray-300;
+}
+
+
 /*******************************/
 /****** END TAILWIND CSS  ******/
 /*******************************/
@@ -110,6 +131,11 @@ select:checked{
 /*******************************/
 /******* BASE *******/
 /*******************************/
+
+
+.no-margin{
+  margin: 0;
+}
 
 /******* Font *******/
 .bold {
