--- a/templates/my_scrobbles/my_scrobbles.html.twig
+++ b/templates/my_scrobbles/my_scrobbles.html.twig
@@ -1,23 +1,25 @@
-<div>
+<turbo-frame id="my_page_last_scrobbles">
+  <div>
 
-  {% if pagination is defined and pagination == 1 %}
-    {% set pagination = true %}
-  {% else %}
-    {% set pagination = false %}
-  {% endif %}
+    {% if pagination is defined and pagination == 1 %}
+      {% set pagination = true %}
+    {% else %}
+      {% set pagination = false %}
+    {% endif %}
 
-  {% if mini is defined and mini == 1 %}
-    {% set mini = true %}
-  {% else %}
-    {% set mini = false %}
-  {% endif %}
+    {% if mini is defined and mini == 1 %}
+      {% set mini = true %}
+    {% else %}
+      {% set mini = false %}
+    {% endif %}
 
-  {% include 'base/html/table/table.html.twig' with {
-    'thead' : myScrobblesThead,
-    'tbody': scrobbles,
-    'tbodyUrl' : myScrobblesTbodyUrl,
-    'pagination' : pagination,
-    'mini' : mini,
-  } %}
+    {% include 'base/html/table/table.html.twig' with {
+      'thead' : myScrobblesThead,
+      'tbody': scrobbles,
+      'tbodyUrl' : myScrobblesTbodyUrl,
+      'pagination' : pagination,
+      'mini' : mini,
+    } %}
 
-</div>
+  </div>
+</turbo-frame>
