--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Music Intelligence Fm{% block title %}{% endblock %}</title>
-  <link rel="icon" href="./favicon.svg">
+  <link rel="icon" href="/favicon.svg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <script src="{{ asset('scripts/main.js') }}"></script>
