--- a/templates/my_tracks/tracks.html.twig
+++ b/templates/my_tracks/tracks.html.twig
@@ -1,4 +1,4 @@
-<turbo-frame id="my_page_my_tracks">
+<turbo-frame id="my_page_top_tracks">
   <div>
 
     {% if pagination is defined and pagination == 1 %}
