--- a/templates/my_page/left_frame.html.twig
+++ b/templates/my_page/left_frame.html.twig
@@ -6,9 +6,12 @@
   </turbo-frame>
 </div>
 
+{# Albums #}
 <div>
   <p><span class="mx-4"><a href="{{ path('app_my_albums') }}">{% include 'base/html/title-h2.html.twig' with {'title': 'Top albums', 'withLink': true } %}</a></span></p>
-  <div class="flex justify-center">{% include 'my_albums/albums_mini.html.twig' %}</div>
+  <turbo-frame id="my_page_top_albums" src="{{ path('app_myPage_topAlbums') }}">
+    <div class="flex justify-center">{% include 'my_albums/albums_mini.html.twig' %}</div>
+  </turbo-frame>
 </div>
 
 <div>
@@ -17,11 +20,10 @@
 </div>
 
 
-
 {# Tracks #}
 <div>
   <p><span class="mx-4"><a href="{{ path('app_my_tracks') }}">{% include 'base/html/title-h2.html.twig' with {'title': 'Top tracks', 'withLink': true } %}</a></span></p>
-  <turbo-frame id="my_page_my_tracks" src="{{ path('app_myPage_my_tracks') }}">
+  <turbo-frame id="my_page_top_tracks" src="{{ path('app_myPage_Toptracks') }}">
     {% include 'base/html/skeleton/tableHomePageSkeleton.html.twig' %}
   </turbo-frame>
 </div>
