--- a/templates/my_artists/artistCard.html.twig
+++ b/templates/my_artists/artistCard.html.twig
@@ -1,33 +1,34 @@
-{% if not mini is defined %}
-<div class="max-w-md flex flex-col bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
-{% else %}
-<div class="flex flex-col bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
-{% endif %}
+{% if not artists is defined %}
+
+  {% if not mini is defined %}
+    <div class="max-w-md flex flex-col bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+  {% else %}
+    <div class="flex flex-col bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+  {% endif %}
 
   <div class="flex p-3">
 
     <div class="inline-block text-white w-1/2 mt-2 self-center">
-      <a href="" class="inline-block"><img class="rounded-full m-2" src="{{ image }}" alt="{{ title }}"/></a>
+      <div class="rounded-full w-full m-2 animate-pulse bg-gray-200 dark:bg-gray-700" style="height: 165px; width: 165px;"></div>
     </div>
 
 
     <div class="inline-block text-white m-2 w-1/2">
 
-      <div class="text-center"><h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white inline-block">{{ title }}</h5></div>
+      <div class="text-center"><h5 class="w-full mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white inline-block">
+          <p class="w-full mt-3 bg-gray-200 rounded-full dark:bg-gray-700" style="height: 20px;"></p>
+      </h5></div>
 
       <div class="text-sm p-2">
         <ul class="">
-          <li class="p-1">
-            {% include 'base/icon/svg-icon.html.twig' with {'icon' : 'scrobble'}%}
-            {{ userPlaycount|number_format( 0, ',', ' ') }} scrobbles
+          <li class="p-1 m-2">
+            <div class="w-full bg-gray-200 rounded-full dark:bg-gray-700" style="height: 15px;"></div>
           </li>
-          <li class="p-1">
-            {% include 'base/icon/svg-icon.html.twig' with {'icon' : 'album'}%}
-            {{ totalAlbum|number_format( 0, ',', ' ') }} album{% if not mini is defined %} listened{% endif %}
+          <li class="p-1 m-2">
+            <div class="w-full bg-gray-200 rounded-full dark:bg-gray-700" style="height: 15px;"></div>
           </li>
-          <li class="p-1">
-            {% include 'base/icon/svg-icon.html.twig' with {'icon' : 'track'}%}
-            {{ totalTrack|number_format( 0, ',', ' ') }} tracks{% if not mini is defined %} listened{% endif %}
+          <li class="p-1 m-2">
+            <div class="w-full bg-gray-200 rounded-full dark:bg-gray-700" style="height: 15px;"></div>
           </li>
         </ul>
       </div>
@@ -39,7 +40,9 @@
   <div class="my-auto"></div>
 
   <div class="px-4">
-    <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">{{ content|u.truncate(150, ' ...') }}</p>
+    <p class="mb-3 font-normal text-gray-700 dark:text-gray-400"><div class="w-full bg-gray-200 rounded-full dark:bg-gray-700" style="height: 15px;"></div></p>
+    <p class="mb-3 font-normal text-gray-700 dark:text-gray-400"><div class="w-full bg-gray-200 rounded-full dark:bg-gray-700" style="height: 15px;"></div></p>
+    <p class="mb-3 font-normal text-gray-700 dark:text-gray-400"><div class="w-full bg-gray-200 rounded-full dark:bg-gray-700" style="height: 15px;"></div></p>
   </div>
 
   <div class="my-auto"></div>
@@ -47,14 +50,73 @@
 
   <div class="px-4">
     <div class="inline-block text-right w-full py-4">
-      <a href="#"
-         class="inline-flex items-center px-3 py-2 text-sm button-main-std">
-        {{ button }}
-        <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-        </svg>
-      </a>
+        <div class="inline-flex w-1/2 mt-5 bg-gray-200 rounded-lg dark:bg-gray-700" style="height: 43px;"></div>
     </div>
   </div>
 
-</div>
+  </div>
+
+{% else %}
+
+  {% if not mini is defined %}
+  <div class="max-w-md flex flex-col bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+  {% else %}
+  <div class="flex flex-col bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+  {% endif %}
+
+    <div class="flex p-3">
+
+      <div class="inline-block text-white w-1/2 mt-2 self-center">
+        <a href="" class="inline-block"><img class="rounded-full m-2" src="{{ image }}" alt="{{ title }}"/></a>
+      </div>
+
+
+      <div class="inline-block text-white m-2 w-1/2">
+
+        <div class="text-center"><h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white inline-block">{{ title }}</h5></div>
+
+        <div class="text-sm p-2">
+          <ul class="">
+            <li class="p-1">
+              {% include 'base/icon/svg-icon.html.twig' with {'icon' : 'scrobble'}%}
+              {{ userPlaycount|number_format( 0, ',', ' ') }} scrobbles
+            </li>
+            <li class="p-1">
+              {% include 'base/icon/svg-icon.html.twig' with {'icon' : 'album'}%}
+              {{ totalAlbum|number_format( 0, ',', ' ') }} album{% if not mini is defined %} listened{% endif %}
+            </li>
+            <li class="p-1">
+              {% include 'base/icon/svg-icon.html.twig' with {'icon' : 'track'}%}
+              {{ totalTrack|number_format( 0, ',', ' ') }} tracks{% if not mini is defined %} listened{% endif %}
+            </li>
+          </ul>
+        </div>
+
+      </div>
+
+    </div>
+
+    <div class="my-auto"></div>
+
+    <div class="px-4">
+      <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">{{ content|u.truncate(150, ' ...') }}</p>
+    </div>
+
+    <div class="my-auto"></div>
+
+
+    <div class="px-4">
+      <div class="inline-block text-right w-full py-4">
+        <a href="#"
+           class="inline-flex items-center px-3 py-2 text-sm button-main-std">
+          {{ button }}
+          <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+          </svg>
+        </a>
+      </div>
+    </div>
+
+  </div>
+
+{% endif %}
