--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,6 +23,9 @@
   {% block javascripts %}
     {% block importmap %}{{ importmap('app') }}{% endblock %}
   {% endblock %}
+
+  {% block head %}
+  {% endblock %}
 </head>
 
 
